# winix

./: .gitignore  .history.txt  CONTRIBUTING.md  CONTRIBUTION.md  Cargo.toml  ISSUE.md  LICENSE  README.md  WINDOWS_INTERNALS.md  test2.txt
installer_files/: README.md  winix.wxs
src/: ansi.rs  cat.rs  chmod.rs  chown.rs  df.rs  disown.rs  echo.rs  env.rs  free.rs  git.rs  grep.rs  head.rs  input.rs  kill.rs  lib.rs  main.rs  nproc.rs  pipeline.rs  powershell.rs  process.rs  ps.rs  rm.rs  sensors.rs  sudo.rs  tail.rs  touch.rs  tui.rs  uname.rs  uptime.rs
src/commands/: mod.rs
tests/: ansi_test.rs  async_commands_test.rs  cat_test.rs  echo_test.rs  input_test.rs  kill.rs  pipeline_test.rs  process.rs  rm_test.rs  touch_test.rs
