[package]
name = "winix"
version = "0.1.0"
edition = "2024"
default-run = "winix"

[dependencies]
which = "5"
colored = "3.0.0"
ratatui = { version = "0.29.0", features = ["all-widgets"] }
crossterm = "0.28.1"
sysinfo = "0.35.1"
dirs = "5.0"
filetime = "0.2"
regex = "1"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = [
    "consoleapi",
    "processthreadsapi",
    "handleapi",
    "winbase",
    "errhandlingapi",
    "winnt",
    "tlhelp32",
    "winuser",
    "wincon",
    "minwindef",
    "windef",
    "libloaderapi"
] }
windows-acl = "0.3.0"

[dev-dependencies]
tempfile = "3.8"

[[bin]]
name = "sudo"
path = "src/sudo.rs"

[[bin]]
name = "disown"
path = "src/disown.rs"
